--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
+	"$schema":"http://json.schemastore.org/chrome-manifest",
+
 	"manifest_version": 3,
 	"name": "Lobster Protect - Site blocker",
-	"short_name": "LobsterProtect",
+	"short_name": "LobProtect",
 	"description": "A free and Open-Source site blocker.",
 	"version": "1.0",
 	"permissions": [
@@ -11,9 +13,9 @@
 		"search"
 	],
 	"icons": {
-		"16": "ui/img/logo64.png",
-		"48": "ui/img/logo128.png",
-		"128": "ui/img/logo512.png"
+		"16": "res/img/logo64.png",
+		"48": "res/img/logo128.png",
+		"128": "res/img/logo512.png"
 	},
 	"background": {
 		"service_worker": "src/service/service-worker.js",
@@ -30,5 +32,5 @@
 			"run_at": "document_start"
 		}
 	],
-	"options_page": "ui/settings.html"
+	"options_page": "page/settings.html"
 }
