--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,9 @@
 		"search"
 	],
 	"icons": {
-		"16": "res/img/logo64.png",
-		"48": "res/img/logo128.png",
-		"128": "res/img/logo512.png"
+		"16": "resources/img/logo64.png",
+		"48": "resources/img/logo128.png",
+		"128": "resources/img/logo512.png"
 	},
 	"background": {
 		"service_worker": "src/service/service-worker.js",
