Changed manifest to include an utils file

--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,8 @@
 				"<all_urls>"
 			],
 			"js": [
-				"src/content/content.js"
+				"src/content/content.js",
+				"src/content/utils.js"
 			],
 			"run_at": "document_start"
 		}
