--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"$schema":"http://json.schemastore.org/chrome-manifest",
-
+	"$schema": "http://json.schemastore.org/chrome-manifest",
 	"manifest_version": 3,
 	"name": "Lobster Protect - Site blocker",
-	"short_name": "LobProtect",
+	"short_name": "LProtect",
 	"description": "A free and Open-Source site blocker.",
-	"version": "1.0",
+	"version": "0.0",
 	"permissions": [
 		"storage",
 		"unlimitedStorage",
@@ -27,8 +26,8 @@
 				"<all_urls>"
 			],
 			"js": [
-				"src/content/content.js",
-				"src/content/utils.js"
+				"src/content/utils.js",
+				"src/content/content.js"
 			],
 			"run_at": "document_start"
 		}
