Lots of changes.
- Altered folder structure, now everything is under src/.
- Fixed the problems that arised from the previous change.
- Updated TODO
- This change happened in the middle of me implementing chrome.storage into the settings page, so that's still a WIP

For future reference:
Axel, please never do commits like these again..

--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,9 @@
 		"search"
 	],
 	"icons": {
-		"16": "resources/img/logo64.png",
-		"48": "resources/img/logo128.png",
-		"128": "resources/img/logo512.png"
+		"16": "src/resources/img/logo64.png",
+		"48": "src/resources/img/logo128.png",
+		"128": "src/resources/img/logo512.png"
 	},
 	"background": {
 		"service_worker": "src/service/service-worker.js",
@@ -26,11 +26,12 @@
 				"<all_urls>"
 			],
 			"js": [
-				"src/content/utils.js",
+				"src/utils/classes.js",
+				"src/utils/enums.js",
 				"src/content/content.js"
 			],
 			"run_at": "document_start"
 		}
 	],
-	"options_page": "page/index.html"
+	"options_page": "src/options_page/index.html"
 }
