Figured out the login system
Now you get redirected to the login page OR the register page

--- a/manifest.json
+++ b/manifest.json
@@ -33,5 +33,5 @@
 			"run_at": "document_start"
 		}
 	],
-	"options_page": "src/options_page/login.html"
+	"options_page": "src/options_page/redirect.html"
 }
