--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,7 @@
 	"version": "1.0",
 	"permissions": [
 		"storage",
-		"unlimitedStorage",
-		"tabs"
+		"unlimitedStorage"
 	],
 	"icons": {
 		"16": "src/resources/img/logo64.png",
